--- a/src/main/resources/assets/bsdfwmi/lang/en_us.json
+++ b/src/main/resources/assets/bsdfwmi/lang/en_us.json
@@ -3,5 +3,6 @@
   "text.autoconfig.bsdfwmi.option.common.maxGroundStack.@tooltip": "Max Items Limit: 1024 items",
   "text.autoconfig.bsdfwmi.option.common.distanceItemEntities": "Distance to Detect Other Item Entities",
   "text.autoconfig.bsdfwmi.option.common.distanceItemEntities.@tooltip[0]": "Min: 0.5 blocks",
-  "text.autoconfig.bsdfwmi.option.common.distanceItemEntities.@tooltip[1]": "Max: 10 blocks"
+  "text.autoconfig.bsdfwmi.option.common.distanceItemEntities.@tooltip[1]": "Max: 10 blocks",
+  "text.autoconfig.bsdfwmi.option.common.distanceItemEntities.@tooltip[2]": "If there is ServerCore, this is disabled, change it in ServerCore configs"
 }
