--- a/src/main/resources/assets/bsdfwmi/lang/en_us.json
+++ b/src/main/resources/assets/bsdfwmi/lang/en_us.json
@@ -4,5 +4,7 @@
   "text.autoconfig.bsdfwmi.option.common.distanceItemEntities": "Distance to Detect Other Item Entities",
   "text.autoconfig.bsdfwmi.option.common.distanceItemEntities.@tooltip[0]": "Min: 0.5 blocks",
   "text.autoconfig.bsdfwmi.option.common.distanceItemEntities.@tooltip[1]": "Max: 10 blocks",
-  "text.autoconfig.bsdfwmi.option.common.distanceItemEntities.@tooltip[2]": "If there is ServerCore, this is disabled, change it in ServerCore configs"
+  "text.autoconfig.bsdfwmi.option.common.distanceItemEntities.@tooltip[2]": "If there is ServerCore, this is disabled, change it in ServerCore configs",
+  "text.autoconfig.bsdfwmi.option.common.maxSpawnerMobs": "Max Spawn Mobs from Spawners",
+  "text.autoconfig.bsdfwmi.option.common.spawnRange": "Spawn Range around a Spawner Block"
 }
