--- a/src/main/resources/assets/bsdfwmi/lang/en_us.json
+++ b/src/main/resources/assets/bsdfwmi/lang/en_us.json
@@ -1,10 +1,25 @@
 {
+  "text.autoconfig.bsdfwmi.title": "Banduty's DFWMI",
+  "text.autoconfig.bsdfwmi.option.common.getTickRateEntities": "TR based on TPS for Entities",
+  "text.autoconfig.bsdfwmi.option.common.getTickRateItemEntities": "TR based on TPS for Item Entities",
+  "text.autoconfig.bsdfwmi.option.common.getTickRateBlockEntities": "TR based on TPS for Block Entities",
+  "text.autoconfig.bsdfwmi.option.common.getTickRateNetherPortalBlock": "TR based on TPS for Nether Portal Blocks",
   "text.autoconfig.bsdfwmi.option.common.maxGroundStack": "Max Ground Stack",
-  "text.autoconfig.bsdfwmi.option.common.maxGroundStack.@tooltip": "Max Items Limit: 1024 items",
+  "text.autoconfig.bsdfwmi.option.common.maxGroundStack.@Tooltip": "Max Items Limit: 1024 items",
   "text.autoconfig.bsdfwmi.option.common.distanceItemEntities": "Distance to Detect Other Item Entities",
-  "text.autoconfig.bsdfwmi.option.common.distanceItemEntities.@tooltip[0]": "Min: 0.5 blocks",
-  "text.autoconfig.bsdfwmi.option.common.distanceItemEntities.@tooltip[1]": "Max: 10 blocks",
-  "text.autoconfig.bsdfwmi.option.common.distanceItemEntities.@tooltip[2]": "If there is ServerCore, this is disabled, change it in ServerCore configs",
+  "text.autoconfig.bsdfwmi.option.common.distanceItemEntities.@Tooltip[0]": "Min: 0.5 blocks",
+  "text.autoconfig.bsdfwmi.option.common.distanceItemEntities.@Tooltip[1]": "Max: 10 blocks",
+  "text.autoconfig.bsdfwmi.option.common.distanceItemEntities.@Tooltip[2]": "If there is ServerCore, this is disabled, change it in ServerCore configs",
   "text.autoconfig.bsdfwmi.option.common.maxSpawnerMobs": "Max Spawn Mobs from Spawners",
-  "text.autoconfig.bsdfwmi.option.common.spawnRange": "Spawn Range around a Spawner Block"
+  "text.autoconfig.bsdfwmi.option.common.spawnerRange": "Spawn Range around a Spawner Block",
+  "text.autoconfig.bsdfwmi.option.common.monsterSpawnGroupCapacity": "Monster SpawnGroup Max Capacity",
+  "text.autoconfig.bsdfwmi.option.common.monsterSpawnGroupCapacity.@Tooltip": "After Changes you need to Restart the Server",
+  "text.autoconfig.bsdfwmi.option.common.creatureSpawnGroupCapacity": "Creature SpawnGroup Max Capacity",
+  "text.autoconfig.bsdfwmi.option.common.creatureSpawnGroupCapacity.@Tooltip": "After Changes you need to Restart the Server",
+  "text.autoconfig.bsdfwmi.option.common.ambientSpawnGroupCapacity": "Ambient SpawnGroup Max Capacity",
+  "text.autoconfig.bsdfwmi.option.common.ambientSpawnGroupCapacity.@Tooltip": "After Changes you need to Restart the Server",
+  "text.autoconfig.bsdfwmi.option.common.value5SpawnGroupCapacity": "Caped 5 Creature SpawnGroup Max Capacity",
+  "text.autoconfig.bsdfwmi.option.common.value5SpawnGroupCapacity.@Tooltip": "After Changes you need to Restart the Server",
+  "text.autoconfig.bsdfwmi.option.common.waterAmbientSpawnGroupCapacity": "Water Ambient SpawnGroup Max Capacity",
+  "text.autoconfig.bsdfwmi.option.common.waterAmbientSpawnGroupCapacity.@Tooltip": "After Changes you need to Restart the Server"
 }
