--- a/src/main/resources/assets/bsdfwmi/lang/en_us.json
+++ b/src/main/resources/assets/bsdfwmi/lang/en_us.json
@@ -1,10 +1,21 @@
 {
   "text.autoconfig.bsdfwmi.title": "Banduty's DFWMI",
-  "text.autoconfig.bsdfwmi.option.common.getStrongerPerformance": "Stronger Optimization mode",
-  "text.autoconfig.bsdfwmi.option.common.getTickRateEntities": "TR based on TPS for Entities",
+  "text.autoconfig.bsdfwmi.option.common.strongerPerformance": "Change mode",
+  "text.autoconfig.bsdfwmi.option.common.strongerPerformance.@Tooltip[0]": "0 = Weak Mode",
+  "text.autoconfig.bsdfwmi.option.common.strongerPerformance.@Tooltip[1]": "1 = Intermediate Mode",
+  "text.autoconfig.bsdfwmi.option.common.strongerPerformance.@Tooltip[2]": "2 = Strong Mode",
+  "text.autoconfig.bsdfwmi.option.common.getTickRateMobEntities": "TR based on TPS for Mob Entities",
+  "text.autoconfig.bsdfwmi.option.common.specificTickRateMobEntities": "Specific Tick Rate for Mob Entities",
+  "text.autoconfig.bsdfwmi.option.common.specificTickRateMobEntities.@Tooltip": "If set to 0, it will do the Tick Rate based on TPS",
   "text.autoconfig.bsdfwmi.option.common.getTickRateItemEntities": "TR based on TPS for Item Entities",
+  "text.autoconfig.bsdfwmi.option.common.specificTickRateItemEntities": "Specific Tick Rate for Item Entities",
+  "text.autoconfig.bsdfwmi.option.common.specificTickRateItemEntities.@Tooltip": "If set to 0, it will do the Tick Rate based on TPS",
   "text.autoconfig.bsdfwmi.option.common.getTickRateBlockEntities": "TR based on TPS for Block Entities",
+  "text.autoconfig.bsdfwmi.option.common.specificTickRateBlockEntities": "Specific Tick Rate for Block Entities",
+  "text.autoconfig.bsdfwmi.option.common.specificTickRateBlockEntities.@Tooltip": "If set to 0, it will do the Tick Rate based on TPS",
   "text.autoconfig.bsdfwmi.option.common.getTickRateNetherPortalBlock": "TR based on TPS for Nether Portal Blocks",
+  "text.autoconfig.bsdfwmi.option.common.specificTickRateNetherPortalBlocks": "Specific Tick Rate for Nether Portal Blocks",
+  "text.autoconfig.bsdfwmi.option.common.specificTickRateNetherPortalBlocks.@Tooltip": "If set to 0, it will do the Tick Rate based on TPS",
   "text.autoconfig.bsdfwmi.option.common.maxGroundStack": "Max Ground Stack",
   "text.autoconfig.bsdfwmi.option.common.maxGroundStack.@Tooltip": "Max Items Limit: 1024 items",
   "text.autoconfig.bsdfwmi.option.common.distanceItemEntities": "Distance to Detect Other Item Entities",
