--- a/src/main/resources/assets/bsdfwmi/lang/en_us.json
+++ b/src/main/resources/assets/bsdfwmi/lang/en_us.json
@@ -4,6 +4,9 @@
   "text.autoconfig.bsdfwmi.option.configs.performanceMode.@Tooltip[0]": "0 = Weak Mode",
   "text.autoconfig.bsdfwmi.option.configs.performanceMode.@Tooltip[1]": "1 = Intermediate Mode",
   "text.autoconfig.bsdfwmi.option.configs.performanceMode.@Tooltip[2]": "2 = Strong Mode",
+  "text.autoconfig.bsdfwmi.option.configs.tickOverworld": "Change Tick Rate for Overworld",
+  "text.autoconfig.bsdfwmi.option.configs.tickNether": "Change Tick Rate for Nether",
+  "text.autoconfig.bsdfwmi.option.configs.tickEnd": "Change Tick Rate for End",
   "text.autoconfig.bsdfwmi.option.configs.getChangeTickRateLivingEntities": "Change Tick Rate for Living Entities",
   "text.autoconfig.bsdfwmi.option.configs.getChangeTickRateLivingEntities.@Tooltip": "Doesn’t affect Player Entities",
   "text.autoconfig.bsdfwmi.option.configs.getChangeTickRateVehicleEntities": "Change Tick Rate for Player's Vehicle Entities",
@@ -30,5 +33,7 @@
   "text.autoconfig.bsdfwmi.option.configs.creatureSpawnGroupCapacity": "Creature SpawnGroup Max Capacity",
   "text.autoconfig.bsdfwmi.option.configs.ambientSpawnGroupCapacity": "Ambient SpawnGroup Max Capacity",
   "text.autoconfig.bsdfwmi.option.configs.value5SpawnGroupCapacity": "Caped 5 Creature SpawnGroup Max Capacity",
-  "text.autoconfig.bsdfwmi.option.configs.waterAmbientSpawnGroupCapacity": "Water Ambient SpawnGroup Max Capacity"
+  "text.autoconfig.bsdfwmi.option.configs.waterAmbientSpawnGroupCapacity": "Water Ambient SpawnGroup Max Capacity",
+  "text.autoconfig.bsdfwmi.option.configs.mobDespawnTime": "Tick Time for Mob Entities to Despawn",
+  "text.autoconfig.bsdfwmi.option.configs.mobDespawnChance": "Chance for Mob Entities to Despawn"
 }
