--- a/src/main/resources/assets/ticktweaks/lang/en_us.json
+++ b/src/main/resources/assets/ticktweaks/lang/en_us.json
@@ -1,40 +1,51 @@
 {
   "text.autoconfig.ticktweaks.title": "Banduty's DFWMI",
-  "text.autoconfig.ticktweaks.option.configs.emergencyStopTps": "Emergency Stop TPS; Stops Block Entity",
-  "text.autoconfig.ticktweaks.option.configs.performanceMode": "Change mode",
-  "text.autoconfig.ticktweaks.option.configs.performanceMode.@Tooltip[0]": "0 = Weak Mode",
-  "text.autoconfig.ticktweaks.option.configs.performanceMode.@Tooltip[1]": "1 = Intermediate Mode",
-  "text.autoconfig.ticktweaks.option.configs.performanceMode.@Tooltip[2]": "2 = Strong Mode",
-  "text.autoconfig.ticktweaks.option.configs.tickOverworld": "Change Tick Rate for Overworld",
-  "text.autoconfig.ticktweaks.option.configs.tickNether": "Change Tick Rate for Nether",
-  "text.autoconfig.ticktweaks.option.configs.tickEnd": "Change Tick Rate for End",
-  "text.autoconfig.ticktweaks.option.configs.getChangeTickRateLivingEntities": "Change Tick Rate for Living Entities",
-  "text.autoconfig.ticktweaks.option.configs.getChangeTickRateLivingEntities.@Tooltip": "Doesn’t affect Player Entities",
-  "text.autoconfig.ticktweaks.option.configs.getChangeTickRateVehicleEntities": "Change Tick Rate for Player's Vehicle Entities",
-  "text.autoconfig.ticktweaks.option.configs.getChangeTickRateVehicleEntities.@Tooltip": "Only when player is mounted",
-  "text.autoconfig.ticktweaks.option.configs.getChangeTickRateHostileEntities": "Change Tick Rate for Hostile Entities",
-  "text.autoconfig.ticktweaks.option.configs.specificTickRateLivingEntities": "Specific Tick Rate for Living Entities",
-  "text.autoconfig.ticktweaks.option.configs.specificTickRateLivingEntities.@Tooltip": "If set to 0, it will do the Tick Rate based on TPS",
-  "text.autoconfig.ticktweaks.option.configs.getChangeTickRateItemEntities": "Change Tick Rate for Item Entities",
-  "text.autoconfig.ticktweaks.option.configs.specificTickRateItemEntities": "Specific Tick Rate for Item Entities",
-  "text.autoconfig.ticktweaks.option.configs.specificTickRateItemEntities.@Tooltip": "If set to 0, it will do the Tick Rate based on TPS",
-  "text.autoconfig.ticktweaks.option.configs.getChangeTickRateBlockEntities": "Change Tick Rate for Block Entities",
-  "text.autoconfig.ticktweaks.option.configs.specificTickRateBlockEntities": "Specific Tick Rate for Block Entities",
-  "text.autoconfig.ticktweaks.option.configs.specificTickRateBlockEntities.@Tooltip": "If set to 0, it will do the Tick Rate based on TPS",
-  "text.autoconfig.ticktweaks.option.configs.getChangeTickRateNetherPortalBlock": "Change Tick Rate for Nether Portal Block Entities",
-  "text.autoconfig.ticktweaks.option.configs.specificTickRateNetherPortalBlocks": "Specific Tick Rate for Nether Portal Blocks",
-  "text.autoconfig.ticktweaks.option.configs.specificTickRateNetherPortalBlocks.@Tooltip": "If set to 0, it will do the Tick Rate based on TPS",
-  "text.autoconfig.ticktweaks.option.configs.distanceItemEntities": "Distance to Detect Other Item Entities",
-  "text.autoconfig.ticktweaks.option.configs.distanceItemEntities.@Tooltip[0]": "Min: 0.5 blocks",
-  "text.autoconfig.ticktweaks.option.configs.distanceItemEntities.@Tooltip[1]": "Max: 10 blocks",
-  "text.autoconfig.ticktweaks.option.configs.distanceItemEntities.@Tooltip[2]": "If there is ServerCore, this is disabled, change it in ServerCore configs",
-  "text.autoconfig.ticktweaks.option.configs.maxSpawnerMobs": "Max Spawn Mobs from Spawners",
-  "text.autoconfig.ticktweaks.option.configs.spawnerRange": "Spawn Range around a Spawner Block",
-  "text.autoconfig.ticktweaks.option.configs.monsterSpawnGroupCapacity": "Monster SpawnGroup Max Capacity",
-  "text.autoconfig.ticktweaks.option.configs.creatureSpawnGroupCapacity": "Creature SpawnGroup Max Capacity",
-  "text.autoconfig.ticktweaks.option.configs.ambientSpawnGroupCapacity": "Ambient SpawnGroup Max Capacity",
-  "text.autoconfig.ticktweaks.option.configs.value5SpawnGroupCapacity": "Caped 5 Creature SpawnGroup Max Capacity",
-  "text.autoconfig.ticktweaks.option.configs.waterAmbientSpawnGroupCapacity": "Water Ambient SpawnGroup Max Capacity",
-  "text.autoconfig.ticktweaks.option.configs.mobDespawnTime": "Tick Time for Mob Entities to Despawn",
-  "text.autoconfig.ticktweaks.option.configs.mobDespawnChance": "Chance for Mob Entities to Despawn"
+
+  "text.autoconfig.ticktweaks.category.tickRateTime": "Tick Rate Time",
+  "text.autoconfig.ticktweaks.option.tickRateTime.tickRateFormula": "Formula Tick Rate Calculation",
+  "text.autoconfig.ticktweaks.option.tickRateTime.tickRateFormula.@Tooltip": "Use tps as the variable for TPS",
+  "text.autoconfig.ticktweaks.option.tickRateTime.specificTickRateLivingEntities": "Tick Rate for Living Entities",
+  "text.autoconfig.ticktweaks.option.tickRateTime.specificTickRateLivingEntities.@Tooltip": "Set to 0 for TPS-based Tick Rate",
+  "text.autoconfig.ticktweaks.option.tickRateTime.specificTickRateItemEntities": "Tick Rate for Item Entities",
+  "text.autoconfig.ticktweaks.option.tickRateTime.specificTickRateItemEntities.@Tooltip": "Set to 0 for TPS-based Tick Rate",
+  "text.autoconfig.ticktweaks.option.tickRateTime.specificTickRateBlockEntities": "Tick Rate for Block Entities",
+  "text.autoconfig.ticktweaks.option.tickRateTime.specificTickRateBlockEntities.@Tooltip": "Set to 0 for TPS-based Tick Rate",
+  "text.autoconfig.ticktweaks.option.tickRateTime.specificTickRateNetherPortalBlocks": "Tick Rate for Nether Portal Blocks",
+  "text.autoconfig.ticktweaks.option.tickRateTime.specificTickRateNetherPortalBlocks.@Tooltip": "Set to 0 for TPS-based Tick Rate",
+
+  "text.autoconfig.ticktweaks.category.enableCustomTick": "Enable Custom Tick",
+  "text.autoconfig.ticktweaks.option.enableCustomTick.tickOverworld": "Change Tick Rate for Overworld",
+  "text.autoconfig.ticktweaks.option.enableCustomTick.tickNether": "Change Tick Rate for Nether",
+  "text.autoconfig.ticktweaks.option.enableCustomTick.tickEnd": "Change Tick Rate for End",
+  "text.autoconfig.ticktweaks.option.enableCustomTick.blacklistedLivingEntities": "Living Entities excluded from custom tick rate",
+  "text.autoconfig.ticktweaks.option.enableCustomTick.blacklistedLivingEntities.@Tooltip[0]": "e.g.: minecraft:zombie, minecraft:skeleton",
+  "text.autoconfig.ticktweaks.option.enableCustomTick.blacklistedLivingEntities.@Tooltip[1]": "Groups: #minecraft:hostile, #minecraft:passive & #minecraft:neutral",
+  "text.autoconfig.ticktweaks.option.enableCustomTick.changeTickRateItemEntities": "Change Tick Rate for Item Entities",
+  "text.autoconfig.ticktweaks.option.enableCustomTick.changeTickRateBlockEntities": "Change Tick Rate for Block Entities",
+  "text.autoconfig.ticktweaks.option.enableCustomTick.changeTickRateNetherPortalBlock": "Change Tick Rate for Nether Portal Blocks",
+
+  "text.autoconfig.ticktweaks.category.stopTick": "Stop Tick",
+  "text.autoconfig.ticktweaks.option.stopTick.emergencyStopTps": "Emergency Stop TPS; Halts Block Entity Ticking",
+  "text.autoconfig.ticktweaks.option.stopTick.stopTickingDistance": "Stop Mobs from Ticking in Player's Range",
+  "text.autoconfig.ticktweaks.option.stopTick.stopTickingDistance.@Tooltip": "Set to 0 to disable stopping",
+  "text.autoconfig.ticktweaks.option.stopTick.tickingTimeOnStop": "Tick Rate Change Upon Stop",
+  "text.autoconfig.ticktweaks.option.stopTick.tickingTimeOnStop.@Tooltip": "Set to 0 to completely stop ticking",
+  "text.autoconfig.ticktweaks.option.stopTick.stopBlacklist": "Mobs exempt from distance-based stop",
+  "text.autoconfig.ticktweaks.option.enableCustomTick.stopBlacklist.@Tooltip[0]": "e.g.: minecraft:zombie, minecraft:skeleton",
+  "text.autoconfig.ticktweaks.option.enableCustomTick.stopBlacklist.@Tooltip[1]": "Groups: #minecraft:hostile, #minecraft:passive & #minecraft:neutral",
+
+  "text.autoconfig.ticktweaks.category.misc": "Miscellaneous",
+  "text.autoconfig.ticktweaks.option.misc.distanceItemEntities": "Detection Range for Item Entities",
+  "text.autoconfig.ticktweaks.option.misc.distanceItemEntities.@Tooltip[0]": "Min Distance: 0.5 blocks",
+  "text.autoconfig.ticktweaks.option.misc.distanceItemEntities.@Tooltip[1]": "Max Distance: 10 blocks",
+  "text.autoconfig.ticktweaks.option.misc.distanceItemEntities.@Tooltip[2]": "Disabled with ServerCore, configure in ServerCore settings",
+  "text.autoconfig.ticktweaks.option.misc.maxSpawnerMobs": "Max Mobs Spawned from Spawners",
+  "text.autoconfig.ticktweaks.option.misc.spawnerRange": "Spawner Spawn Range",
+  "text.autoconfig.ticktweaks.option.misc.monsterSpawnGroupCapacity": "Max Capacity for Monster Spawn Groups",
+  "text.autoconfig.ticktweaks.option.misc.creatureSpawnGroupCapacity": "Max Capacity for Creature Spawn Groups",
+  "text.autoconfig.ticktweaks.option.misc.ambientSpawnGroupCapacity": "Max Capacity for Ambient Spawn Groups",
+  "text.autoconfig.ticktweaks.option.misc.waterCreatureSpawnGroupCapacity": "Max Capacity for Water Creature Spawn Groups",
+  "text.autoconfig.ticktweaks.option.misc.waterAmbientSpawnGroupCapacity": "Max Capacity for Water Ambient Spawn Groups",
+  "text.autoconfig.ticktweaks.option.misc.mobDespawnTime": "Time for Mob Entities to Despawn",
+  "text.autoconfig.ticktweaks.option.misc.mobDespawnChance": "Chance for Mob Entities to Despawn"
 }
