--- a/src/main/resources/assets/ticktweaks/lang/es_es.json
+++ b/src/main/resources/assets/ticktweaks/lang/es_es.json
@@ -1,40 +1,51 @@
 {
   "text.autoconfig.ticktweaks.title": "Banduty's DFWMI",
-  "text.autoconfig.ticktweaks.option.configs.emergencyStopTps": "Botón de Emergencia TPS",
-  "text.autoconfig.ticktweaks.option.configs.performanceMode": "Cambiar Modo",
-  "text.autoconfig.ticktweaks.option.configs.performanceMode.@Tooltip[0]": "0 = Modo Débil",
-  "text.autoconfig.ticktweaks.option.configs.performanceMode.@Tooltip[1]": "1 = Modo Intermedio",
-  "text.autoconfig.ticktweaks.option.configs.performanceMode.@Tooltip[2]": "2 = Modo Fuerte",
-  "text.autoconfig.ticktweaks.option.configs.tickOverworld": "Cambiar Tick Rate para el Overworld",
-  "text.autoconfig.ticktweaks.option.configs.tickNether": "Cambiar Tick Rate para el Nether",
-  "text.autoconfig.ticktweaks.option.configs.tickEnd": "Cambiar Tick Rate para el End",
-  "text.autoconfig.ticktweaks.option.configs.getChangeTickRateLivingEntities": "Cambiar Tick Rate para Entidades Vivas",
-  "text.autoconfig.ticktweaks.option.configs.getChangeTickRateLivingEntities.@Tooltip": "No afecta a los Jugadores",
-  "text.autoconfig.ticktweaks.option.configs.getChangeTickRateVehicleEntities": "Cambiar Tick Rate para Vehículos",
-  "text.autoconfig.ticktweaks.option.configs.getChangeTickRateVehicleEntities.@Tooltip": "Sólo cuando el jugador está montado",
-  "text.autoconfig.ticktweaks.option.configs.getChangeTickRateHostileEntities": "Cambiar Tick Rate para Entidades Hostiles",
-  "text.autoconfig.ticktweaks.option.configs.specificTickRateLivingEntities": "Tick Rate específico para Entidades Vivas",
-  "text.autoconfig.ticktweaks.option.configs.specificTickRateLivingEntities.@Tooltip": "Si se establece en 0, realizará el Tick Rate basado en TPS",
-  "text.autoconfig.ticktweaks.option.configs.getChangeTickRateItemEntities": "Cambiar Tick Rate para Entidades de Objetos",
-  "text.autoconfig.ticktweaks.option.configs.specificTickRateItemEntities": "Tick Rate específico para Entidades de Objetos",
-  "text.autoconfig.ticktweaks.option.configs.specificTickRateItemEntities.@Tooltip": "Si se establece en 0, realizará el Tick Rate basado en TPS",
-  "text.autoconfig.ticktweaks.option.configs.getChangeTickRateBlockEntities": "Cambiar Tick Rate para Bloques con Entidades",
-  "text.autoconfig.ticktweaks.option.configs.specificTickRateBlockEntities": "Tick Rate específico para Bloques con Entidades",
-  "text.autoconfig.ticktweaks.option.configs.specificTickRateBlockEntities.@Tooltip": "Si se establece en 0, realizará el Tick Rate basado en TPS",
-  "text.autoconfig.ticktweaks.option.configs.getChangeTickRateNetherPortalBlock": "Cambiar Tick Rate para Bloques del Portal del Nether",
-  "text.autoconfig.ticktweaks.option.configs.specificTickRateNetherPortalBlocks": "Tick Rate específico para Bloques del Portal del Nether",
-  "text.autoconfig.ticktweaks.option.configs.specificTickRateNetherPortalBlocks.@Tooltip": "Si se establece en 0, realizará el Tick Rate basado en TPS",
-  "text.autoconfig.ticktweaks.option.configs.distanceItemEntities": "Distancia para detectar otras Entidades de Objetos",
-  "text.autoconfig.ticktweaks.option.configs.distanceItemEntities.@Tooltip[0]": "Min: 0.5 bloques",
-  "text.autoconfig.ticktweaks.option.configs.distanceItemEntities.@Tooltip[1]": "Max: 10 bloques",
-  "text.autoconfig.ticktweaks.option.configs.distanceItemEntities.@Tooltip[2]": "Si está ServerCore, esto está deshabilitado",
-  "text.autoconfig.ticktweaks.option.configs.maxSpawnerMobs": "Max Aparición de Monstruos de Bloques Generadores",
-  "text.autoconfig.ticktweaks.option.configs.spawnerRange": "Rango de Aparición alrededor de un Bloque Generador",
-  "text.autoconfig.ticktweaks.option.configs.monsterSpawnGroupCapacity": "Capacidad máxima de aparición de monstruos",
-  "text.autoconfig.ticktweaks.option.configs.creatureSpawnGroupCapacity": "Capacidad máxima de generación de criaturas",
-  "text.autoconfig.ticktweaks.option.configs.ambientSpawnGroupCapacity": "Capacidad máxima de generación ambiental",
-  "text.autoconfig.ticktweaks.option.configs.value5SpawnGroupCapacity": "Capacidad máxima de generación de criaturas con valor 5",
-  "text.autoconfig.ticktweaks.option.configs.waterAmbientSpawnGroupCapacity": "Capacidad máxima de generación ambiental del agua",
-  "text.autoconfig.ticktweaks.option.configs.mobDespawnTime": "Ticks para que las Criaturas Desaparezcan",
-  "text.autoconfig.ticktweaks.option.configs.mobDespawnChance": "Probabilidad para que las Criaturas Desaparezcan"
+
+  "text.autoconfig.ticktweaks.category.tickRateTime": "Tasa de Ticks Personalizado",
+  "text.autoconfig.ticktweaks.option.tickRateTime.tickRateFormula": "Fórmula de Cálculo de Tasa de Ticks",
+  "text.autoconfig.ticktweaks.option.tickRateTime.tickRateFormula.@Tooltip": "Usa tps como la variable para TPS",
+  "text.autoconfig.ticktweaks.option.tickRateTime.specificTickRateLivingEntities": "Tasa de Ticks para Entidades Vivas",
+  "text.autoconfig.ticktweaks.option.tickRateTime.specificTickRateLivingEntities.@Tooltip": "0 = Basado en TPS",
+  "text.autoconfig.ticktweaks.option.tickRateTime.specificTickRateItemEntities": "Tasa de Ticks para Entidades de Objetos",
+  "text.autoconfig.ticktweaks.option.tickRateTime.specificTickRateItemEntities.@Tooltip": "0 = Basado en TPS",
+  "text.autoconfig.ticktweaks.option.tickRateTime.specificTickRateBlockEntities": "Tasa de Ticks para Entidades de Bloques",
+  "text.autoconfig.ticktweaks.option.tickRateTime.specificTickRateBlockEntities.@Tooltip": "0 = Basado en TPS",
+  "text.autoconfig.ticktweaks.option.tickRateTime.specificTickRateNetherPortalBlocks": "Tasa de Ticks para Bloques de Portal del Nether",
+  "text.autoconfig.ticktweaks.option.tickRateTime.specificTickRateNetherPortalBlocks.@Tooltip": "0 = Basado en TPS",
+
+  "text.autoconfig.ticktweaks.category.enableCustomTick": "Habilitar Tasa de Ticks Personalizado",
+  "text.autoconfig.ticktweaks.option.enableCustomTick.tickOverworld": "Cambiar Tasa de Ticks para el Mundo",
+  "text.autoconfig.ticktweaks.option.enableCustomTick.tickNether": "Cambiar Tasa de Ticks para el Nether",
+  "text.autoconfig.ticktweaks.option.enableCustomTick.tickEnd": "Cambiar Tasa de Ticks para el Final",
+  "text.autoconfig.ticktweaks.option.enableCustomTick.blacklistedLivingEntities": "Entidades Vivas excluidas del Tasa de Ticks personalizado",
+  "text.autoconfig.ticktweaks.option.enableCustomTick.blacklistedLivingEntities.@Tooltip[0]": "ej.: minecraft:zombie, minecraft:skeleton",
+  "text.autoconfig.ticktweaks.option.enableCustomTick.blacklistedLivingEntities.@Tooltip[1]": "Grupos: #minecraft:hostile, #minecraft:passive y #minecraft:neutral",
+  "text.autoconfig.ticktweaks.option.enableCustomTick.changeTickRateItemEntities": "Cambiar Tasa de Ticks Entidades de Objetos",
+  "text.autoconfig.ticktweaks.option.enableCustomTick.changeTickRateBlockEntities": "Cambiar Tasa de Ticks Entidades de Bloques",
+  "text.autoconfig.ticktweaks.option.enableCustomTick.changeTickRateNetherPortalBlock": "Cambiar Tasa de Ticks Bloques de Portal",
+
+  "text.autoconfig.ticktweaks.category.stopTick": "Detener Tick",
+  "text.autoconfig.ticktweaks.option.stopTick.emergencyStopTps": "Detención de Emergencia por TPS",
+  "text.autoconfig.ticktweaks.option.stopTick.stopTickingDistance": "Detener Mobs en Distancia",
+  "text.autoconfig.ticktweaks.option.stopTick.stopTickingDistance.@Tooltip": "0 = No se detiene",
+  "text.autoconfig.ticktweaks.option.stopTick.tickingTimeOnStop": "Cambiar Tasa de Ticks al Detener",
+  "text.autoconfig.ticktweaks.option.stopTick.tickingTimeOnStop.@Tooltip": "0 = Detener Tasa de Ticks",
+  "text.autoconfig.ticktweaks.option.stopTick.stopBlacklist": "Mobs exentos de la Detención basada en Distancia",
+  "text.autoconfig.ticktweaks.option.enableCustomTick.stopBlacklist.@Tooltip[0]": "ej.: minecraft:zombie, minecraft:skeleton",
+  "text.autoconfig.ticktweaks.option.enableCustomTick.stopBlacklist.@Tooltip[1]": "Grupos: #minecraft:hostile, #minecraft:passive y #minecraft:neutral",
+
+  "text.autoconfig.ticktweaks.category.misc": "Varios",
+  "text.autoconfig.ticktweaks.option.misc.distanceItemEntities": "Distancia para Objetos",
+  "text.autoconfig.ticktweaks.option.misc.distanceItemEntities.@Tooltip[0]": "Distancia mínima: 0.5 bloques",
+  "text.autoconfig.ticktweaks.option.misc.distanceItemEntities.@Tooltip[1]": "Distancia máxima: 10 bloques",
+  "text.autoconfig.ticktweaks.option.misc.distanceItemEntities.@Tooltip[2]": "Deshabilitado con ServerCore",
+  "text.autoconfig.ticktweaks.option.misc.maxSpawnerMobs": "Máx. Mobs de Spawners",
+  "text.autoconfig.ticktweaks.option.misc.spawnerRange": "Rango de Generación",
+  "text.autoconfig.ticktweaks.option.misc.monsterSpawnGroupCapacity": "Capacidad Grupo Monstruos",
+  "text.autoconfig.ticktweaks.option.misc.creatureSpawnGroupCapacity": "Capacidad Grupo Criaturas",
+  "text.autoconfig.ticktweaks.option.misc.ambientSpawnGroupCapacity": "Capacidad Grupo Ambiental",
+  "text.autoconfig.ticktweaks.option.misc.waterCreatureSpawnGroupCapacity": "Capacidad Grupo Criaturas Acuáticas",
+  "text.autoconfig.ticktweaks.option.misc.waterAmbientSpawnGroupCapacity": "Capacidad Grupo Ambiental Acuático",
+  "text.autoconfig.ticktweaks.option.misc.mobDespawnTime": "Tiempo para Desaparecer Mobs",
+  "text.autoconfig.ticktweaks.option.misc.mobDespawnChance": "Probabilidad de Desaparición de Mobs"
 }
