--- a/src/main/resources/assets/ticktweaks/lang/es_es.json
+++ b/src/main/resources/assets/ticktweaks/lang/es_es.json
@@ -1,41 +1,55 @@
 {
-  "text.autoconfig.ticktweaks.title": "Banduty's DFWMI",
+  "text.autoconfig.ticktweaks.title": "Ajustes de Ticks",
 
-  "text.autoconfig.ticktweaks.category.tickRateTime": "Tasa de Ticks Personalizado",
-  "text.autoconfig.ticktweaks.option.tickRateTime.tickRateFormula": "Fórmula de Cálculo de Tasa de Ticks",
-  "text.autoconfig.ticktweaks.option.tickRateTime.tickRateFormula.@Tooltip": "Usa tps como la variable para TPS",
-  "text.autoconfig.ticktweaks.option.tickRateTime.specificTickRateLivingEntities": "Tasa de Ticks para Entidades Vivas",
-  "text.autoconfig.ticktweaks.option.tickRateTime.specificTickRateLivingEntities.@Tooltip": "0 = Basado en TPS",
-  "text.autoconfig.ticktweaks.option.tickRateTime.specificTickRateItemEntities": "Tasa de Ticks para Entidades de Objetos",
-  "text.autoconfig.ticktweaks.option.tickRateTime.specificTickRateItemEntities.@Tooltip": "0 = Basado en TPS",
-  "text.autoconfig.ticktweaks.option.tickRateTime.specificTickRateBlockEntities": "Tasa de Ticks para Entidades de Bloques",
-  "text.autoconfig.ticktweaks.option.tickRateTime.specificTickRateBlockEntities.@Tooltip": "0 = Basado en TPS",
+  "text.autoconfig.ticktweaks.category.coreTickSettings": "Ajustes Principales",
+  "text.autoconfig.ticktweaks.option.coreTickSettings.tickRateFormula": "Fórmula de Tick Rate",
+  "text.autoconfig.ticktweaks.option.coreTickSettings.tickRateFormula.@Tooltip": "Usar 'tps' para TPS",
+  "text.autoconfig.ticktweaks.option.coreTickSettings.enabledDimensions": "TR por Dimensión",
 
-  "text.autoconfig.ticktweaks.category.enableCustomTick": "Habilitar Tasa de Ticks Personalizado",
-  "text.autoconfig.ticktweaks.option.enableCustomTick.tickOverworld": "Cambiar Tasa de Ticks para el Mundo",
-  "text.autoconfig.ticktweaks.option.enableCustomTick.tickNether": "Cambiar Tasa de Ticks para el Nether",
-  "text.autoconfig.ticktweaks.option.enableCustomTick.tickEnd": "Cambiar Tasa de Ticks para el Final",
-  "text.autoconfig.ticktweaks.option.enableCustomTick.blacklistedLivingEntities": "Entidades Vivas excluidas del Tasa de Ticks personalizado",
-  "text.autoconfig.ticktweaks.option.enableCustomTick.blacklistedLivingEntities.@Tooltip[0]": "ej.: minecraft:zombie, minecraft:skeleton",
-  "text.autoconfig.ticktweaks.option.enableCustomTick.blacklistedLivingEntities.@Tooltip[1]": "Grupos: #minecraft:hostile, #minecraft:passive y #minecraft:neutral",
-  "text.autoconfig.ticktweaks.option.enableCustomTick.changeTickRateItemEntities": "Cambiar Tasa de Ticks Entidades de Objetos",
-  "text.autoconfig.ticktweaks.option.enableCustomTick.changeTickRateBlockEntities": "Cambiar Tasa de Ticks Entidades de Bloques",
+  "text.autoconfig.ticktweaks.category.emergencySettings": "Ajustes Emergencia",
+  "text.autoconfig.ticktweaks.option.emergencySettings.tpsThreshold": "Umbral TPS Emergencia",
+  "text.autoconfig.ticktweaks.option.emergencySettings.tpsThreshold.@Tooltip": "Congelar entidades",
 
-  "text.autoconfig.ticktweaks.category.stopTick": "Detener Tick",
-  "text.autoconfig.ticktweaks.option.stopTick.emergencyStopTps": "Detención de Emergencia por TPS",
-  "text.autoconfig.ticktweaks.option.stopTick.stopTickingDistance": "Detener Mobs en Distancia",
-  "text.autoconfig.ticktweaks.option.stopTick.stopTickingDistance.@Tooltip": "0 = No se detiene",
-  "text.autoconfig.ticktweaks.option.stopTick.tickingTimeOnStop": "Cambiar Tasa de Ticks al Detener",
-  "text.autoconfig.ticktweaks.option.stopTick.tickingTimeOnStop.@Tooltip": "0 = Detener Tasa de Ticks",
-  "text.autoconfig.ticktweaks.option.stopTick.stopBlacklist": "Mobs exentos de la Detención basada en Distancia",
-  "text.autoconfig.ticktweaks.option.enableCustomTick.stopBlacklist.@Tooltip[0]": "ej.: minecraft:zombie, minecraft:skeleton",
-  "text.autoconfig.ticktweaks.option.enableCustomTick.stopBlacklist.@Tooltip[1]": "Grupos: #minecraft:hostile, #minecraft:passive y #minecraft:neutral",
+  "text.autoconfig.ticktweaks.category.entityTickSettings": "Ticks de Entidades",
+  "text.autoconfig.ticktweaks.option.entityTickSettings.livingEntities": "Entidades Vivas",
+  "text.autoconfig.ticktweaks.option.entityTickSettings.livingEntities.fixedTickRate": "Tick Rate Fijo",
+  "text.autoconfig.ticktweaks.option.entityTickSettings.livingEntities.fixedTickRate.@Tooltip": "0 = dinámico (TPS)",
+  "text.autoconfig.ticktweaks.option.entityTickSettings.livingEntities.nonVisibleTickRate": "TR Entidades No Renderizadas",
+  "text.autoconfig.ticktweaks.option.entityTickSettings.livingEntities.exemptEntities": "Excluir de ajustes",
 
-  "text.autoconfig.ticktweaks.category.misc": "Varios",
-  "text.autoconfig.ticktweaks.option.misc.distanceItemEntities": "Distancia para Objetos",
-  "text.autoconfig.ticktweaks.option.misc.distanceItemEntities.@Tooltip[0]": "Distancia mínima: 0.5 bloques",
-  "text.autoconfig.ticktweaks.option.misc.distanceItemEntities.@Tooltip[1]": "Distancia máxima: 10 bloques",
-  "text.autoconfig.ticktweaks.option.misc.distanceItemEntities.@Tooltip[2]": "Deshabilitado con ServerCore",
-  "text.autoconfig.ticktweaks.option.misc.mobDespawnTime": "Tiempo para Desaparecer Mobs",
-  "text.autoconfig.ticktweaks.option.misc.mobDespawnChance": "Probabilidad de Desaparición de Mobs"
+  "text.autoconfig.ticktweaks.option.entityTickSettings.itemEntities": "Entidades de Ítems",
+  "text.autoconfig.ticktweaks.option.entityTickSettings.itemEntities.fixedTickRate": "Tick Rate Fijo",
+  "text.autoconfig.ticktweaks.option.entityTickSettings.itemEntities.fixedTickRate.@Tooltip": "0 = dinámico (TPS)",
+  "text.autoconfig.ticktweaks.option.entityTickSettings.itemEntities.enabled": "TR Dinámico (ítems)",
+  "text.autoconfig.ticktweaks.option.entityTickSettings.itemEntities.detectionRange": "Rango detección ítems",
+  "text.autoconfig.ticktweaks.option.entityTickSettings.itemEntities.detectionRange.@Tooltip": "Bloques",
+
+  "text.autoconfig.ticktweaks.option.entityTickSettings.blockEntities": "Entidades de Bloque",
+  "text.autoconfig.ticktweaks.option.entityTickSettings.blockEntities.fixedTickRate": "Tick Rate Fijo",
+  "text.autoconfig.ticktweaks.option.entityTickSettings.blockEntities.fixedTickRate.@Tooltip": "0 = dinámico (TPS)",
+  "text.autoconfig.ticktweaks.option.entityTickSettings.blockEntities.enabled": "TR Dinámico (bloques)",
+
+  "text.autoconfig.ticktweaks.category.performanceSettings": "Rendimiento",
+  "text.autoconfig.ticktweaks.option.performanceSettings.activationRanges": "Rangos Activación",
+  "text.autoconfig.ticktweaks.option.performanceSettings.activationRanges.enabled": "Activado",
+
+  "text.autoconfig.ticktweaks.option.performanceSettings.activationRanges.defaultRange": "Rango Predeterminado",
+  "text.autoconfig.ticktweaks.option.performanceSettings.activationRanges.defaultRange.range": "Rango",
+  "text.autoconfig.ticktweaks.option.performanceSettings.activationRanges.defaultRange.tickInterval": "Intervalo Ticks",
+  "text.autoconfig.ticktweaks.option.performanceSettings.activationRanges.defaultRange.wakeupInterval": "Intervalo Reactivación",
+
+  "text.autoconfig.ticktweaks.option.performanceSettings.activationRanges.customRanges": "Rangos Personalizados",
+  "text.autoconfig.ticktweaks.option.CustomActivationRange": "Rango Activ. Personalizado",
+  "text.autoconfig.ticktweaks.option.CustomActivationRange.name": "Nombre",
+  "text.autoconfig.ticktweaks.option.CustomActivationRange.range": "Rango",
+  "text.autoconfig.ticktweaks.option.CustomActivationRange.tickInterval": "Intervalo Ticks",
+  "text.autoconfig.ticktweaks.option.CustomActivationRange.wakeupInterval": "Reactivar Cada",
+  "text.autoconfig.ticktweaks.option.CustomActivationRange.entities": "Entidades",
+
+  "text.autoconfig.ticktweaks.option.performanceSettings.mobDespawn": "Desaparición Mobs",
+  "text.autoconfig.ticktweaks.option.performanceSettings.mobDespawn.despawnTime": "Ticks hasta desaparición",
+  "text.autoconfig.ticktweaks.option.performanceSettings.mobDespawn.despawnChance": "Prob. desaparición/tick",
+
+  "text.autoconfig.ticktweaks.option.performanceSettings.settingsCacheTime": "Tiempo Cache Rangos Personalizados",
+  "text.autoconfig.ticktweaks.option.performanceSettings.settingsCacheTime.@Tooltip": "Segundos"
 }
